copier update : install wkhtmltopdf

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -9,7 +9,7 @@ github_enable_codecov: true
 github_enable_makepot: true
 github_enable_stale_action: true
 github_enforce_dev_status_compatibility: true
-include_wkhtmltopdf: false
+include_wkhtmltopdf: true
 odoo_test_flavor: Both
 odoo_version: 14.0
 org_name: Odoo Community Association (OCA)
